--- a/sd/index.html
+++ b/sd/index.html
@@ -205,7 +205,7 @@ $ kubectl delete ns other
 
 <p>Keep in mind that removing a namespace will destroy every resource inside.</p>
 
-<p><a href="/services">Previous</a> | <a href="/healthz">Next</a></p>
+<p><a href="/services">Previous</a> | <a href="/pf">Next</a></p>
 
         
       </div>
