--- a/nodes/index.html
+++ b/nodes/index.html
@@ -210,7 +210,7 @@ Allocated resources:
 No events.
 </code></pre>
 
-<p><a href="/jobs">Previous</a></p>
+<p><a href="/jobs">Previous</a> | <a href="/api">Next</a></p>
 
         
       </div>
