--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta property="og:title" content="Kubernetes By Example" />
   <meta name="twitter:title" content="Kubernetes By Example" />
   <meta name="description" content="This is a hands-on introduction to Kubernetes. Browse the examples:
- pods labels replication controllers deployments services service discovery port forward health checks environment variables namespaces volumes secrets logging jobs nodes API server  Want to try it out yourself? You can run all this on Red Hat&rsquo;s distribution of Kubernetes, OpenShift. Follow the instructions here for a local setup or sign up for openshift.com for an online environment.">
+ pods labels replication controllers deployments services service discovery port forward health checks environment variables namespaces volumes persistent volumes secrets logging jobs nodes API server  Want to try it out yourself? You can run all this on Red Hat&rsquo;s distribution of Kubernetes, OpenShift. Follow the instructions here for a local setup or sign up for openshift.com for an online environment.">
   <meta property="og:description" content="This is a hands-on introduction to Kubernetes. Browse the examples:
- pods labels replication controllers deployments services service discovery port forward health checks environment variables namespaces volumes secrets logging jobs nodes API server  Want to try it out yourself? You can run all this on Red Hat&rsquo;s distribution of Kubernetes, OpenShift. Follow the instructions here for a local setup or sign up for openshift.com for an online environment.">
+ pods labels replication controllers deployments services service discovery port forward health checks environment variables namespaces volumes persistent volumes secrets logging jobs nodes API server  Want to try it out yourself? You can run all this on Red Hat&rsquo;s distribution of Kubernetes, OpenShift. Follow the instructions here for a local setup or sign up for openshift.com for an online environment.">
   <meta name="twitter:description" content="This is a hands-on introduction to Kubernetes. Browse the examples:
  pods labels replication controllers deployments services service discovery port forward health checks environment variables …">
   <meta name="author" content="Michael Hausenblas"/>
@@ -143,6 +143,7 @@
 <li><a href="/envs/">environment variables</a></li>
 <li><a href="/ns/">namespaces</a></li>
 <li><a href="/volumes/">volumes</a></li>
+<li><a href="/pv/">persistent volumes</a></li>
 <li><a href="/secrets/">secrets</a></li>
 <li><a href="/logging/">logging</a></li>
 <li><a href="/jobs/">jobs</a></li>
