--- a/jobs/index.html
+++ b/jobs/index.html
@@ -190,7 +190,7 @@ job &quot;countdown&quot; deleted
 by utilizing a <a href="https://kubernetes.io/docs/tasks/job/coarse-parallel-processing-work-queue/">work queue</a>
 or scheduling the execution at a certain time via <a href="https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/">cron jobs</a>.</p>
 
-<p><a href="/logging">Previous</a> | <a href="/nodes">Next</a></p>
+<p><a href="/logging">Previous</a> | <a href="/statefulset">Next</a></p>
 
         
       </div>
