--- a/statefulset/index.html
+++ b/statefulset/index.html
@@ -163,7 +163,7 @@ pod &quot;jumpod&quot; deleted
 
 <p>Note that sometimes a <code>StatefulSet</code> is not the best fit for your stateful app. You might be better off defining a <a href="https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/">custom resource</a> along with writing a custom controller to have finer-grained control over your workload.</p>
 
-<p><a href="/jobs">Previous</a> | <a href="/nodes">Next</a></p>
+<p><a href="/jobs">Previous</a> | <a href="/ic">Next</a></p>
 
         
       </div>
